--- a/index.html
+++ b/index.html
@@ -13,13 +13,17 @@
   
   <p>This School also offers many clubs such as</p>
   <ul>
-    <li>Chess</li>
-    <li>Drama</li>
-    <li>Music/li>
+    <li>Chess club</li>
+    <li>Drama club</li>
+    <li>Music club/li>
     <li>Sports club</li>
-    <li>
+    <li>Photography club</li>
+    <li>Art club</li>
     
   </ul>
+  
+  <p>As you can see, there are many clubs, activities and such for everyone and anyone to have fun and enjoy<br>
+    we want to make this learning experience fun for everyone!</p>
   
   </body>
  </html>
