--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
       
       So come along and be apart of this community!</P>
   
-  <p>This School also offers many clubs such as</p>
+  <h2>This School also offers many clubs such as</h2>
+  
   <ul>
     <li>Chess club</li>
     <li>Drama club</li>
@@ -24,6 +25,8 @@
   
   <p>As you can see, there are many clubs, activities and such for everyone and anyone to have fun and enjoy<br>
     we want to make this learning experience fun for everyone!</p>
+  
+  <h3></h3>
   
   </body>
  </html>
