--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <p>As you can see, there are many clubs, activities and such for everyone and anyone to have fun and enjoy<br>
     we want to make this learning experience fun for everyone!</p>
   
-  <p><a href=""></a>Here is one of my favourite sports team in the school!</p> 
+  <p><a href=""></a>Here is one of my favourite Clubs in the school!</p> 
   
   <h3></h3>
   
